# DoseAndFluxCalculator

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  doseAndFluxCalculator.py  dose_response_calculator.ipynb  main.py  particleResponse.py  plotting_yield_functions.ipynb  pyproject.toml  recreating_yield_values.ipynb  requirements.txt  responseFileParameters.py  settings.py  setup.py  units.py
.github/workflows/: python-package.yml
Fortran_src/: dafalp.f  dafpro.f
atmosphericRadiationDoseAndFlux/: __init__.py  doseAndFluxCalculator.py  particle.py  particleResponse.py  responseFileParameters.py  settings.py  units.py
atmosphericRadiationDoseAndFlux/data/alpha/: adose.rpf  dosee.rpf  edose.rpf  neutron.rpf
atmosphericRadiationDoseAndFlux/data/proton/: adose.rpf  dosee.rpf  edose.rpf  neutron.rpf
data/alpha/: adose.rpf  dosee.rpf  neutron.rpf
data/proton/: edose.rpf
scripts/: generate_kgo_reference.py
tests/: performance_benchmark.py  test_general.py  test_scientific.py
tests/fixtures/: README.md  kgo_energy_flat_alpha.npz  kgo_energy_flat_both.npz  kgo_energy_flat_proton.npz  kgo_energy_powerlaw_em2_proton.npz  kgo_energy_powerlaw_em7_alpha.npz  kgo_energy_powerlaw_em7_both.npz  kgo_energy_powerlaw_em7_proton.npz  kgo_energy_singlestep_alpha.npz  kgo_energy_singlestep_proton.npz  kgo_rigidity_flat_proton_60km.npz  kgo_rigidity_powerlaw_rm7_alpha.npz  kgo_rigidity_powerlaw_rm7_proton.npz
