[project]
name = "atmosphericRadiationDoseAndFlux"
version = "1.0.13"
description = "Python library for calculating doses and fluxes at a particular altitude given an input spectrum"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Space Environment and Protection Group, University of Surrey"}
]
keywords = ["atmosphere", "radiation", "space weather", "cosmic rays", "spectrum", "alpha particles", "yield response", "dose rates", "ambient", "effective", "GLE", "sun", "solar", "aviation", "neutron monitor"]
license = {text = "CC BY-NC-SA 4.0"}
dependencies = [
    "importlib_resources>=5.10.0",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "ParticleRigidityCalculationTools>=1.5.4",
    "setuptools>=45.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-runner",
]

[project.urls]
repository = "https://github.com/ssc-maire/DoseAndFluxCalculator"

[build-system]
requires = ["setuptools>=45.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["atmosphericRadiationDoseAndFlux"]

[tool.setuptools.exclude-package-data]
"*" = ["tests/*"]

[tool.setuptools.package-data]
"atmosphericRadiationDoseAndFlux" = [
    "data/proton/*.rpf",
    "data/alpha/*.rpf"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
